--- a/website/static/css/landing.css
+++ b/website/static/css/landing.css
@@ -26,7 +26,7 @@
 .homeSplashFade > div {
   max-width: 30%;
   text-align: left;
-  margin: 0 200px;
+  margin: 0 200px 0 0;
 }
 
 .buttonWrapper .button {
@@ -51,7 +51,7 @@
 }
 
 .mainContainer .wrapper {
-  max-width: 1000px;
+  /* max-width: 1000px; */
 }
 
 .blockImage {
@@ -81,18 +81,21 @@
   flex-basis: unset; */
 }
 
-@media only screen and (max-device-width: 736px) {
+@media only screen and (max-width: 736px) {
   .homeSplashFade {
     background-position-x: 170px;
     padding: 60px 0;
   }
-  .homeSplashFade > div {
-    max-width: unset;
-    margin: 0 50px;
-  }
   .homeBlock > div {
     max-width: 100%;
     margin: 0 30px;
+  }
+}
+
+@media only screen and (max-width: 1160px) {
+  .homeSplashFade > div {
+    max-width: unset;
+    margin: 0 50px;
   }
 }
 
